--- a/4xtbs game/bin/.gitignore
+++ b/4xtbs game/bin/.gitignore
@@ -1,1 +1,10 @@
-/Building.class/Button.class/City.class/Coordinate.class/Grid.class/Main.class/Notification.class/Player.class/Tile.class/Unit.class
+/Building.class
+/Button.class
+/City.class
+/Coordinate.class
+/Grid.class
+/Main.class
+/Notification.class
+/Player.class
+/Tile.class
+/Unit.class
